syntax = "proto3";

import "entities/logs.proto";
import "responses/core.proto";

message GetAllLogsResponse {
  repeated Log logs = 1;
}

message GetPollingLogsRequest {
  uint32 timestamp = 1;
}

message GetPollingLogsResponse {
  repeated Log data = 1;
  PollingMetaData meta = 2;
}
